# py-opw-kinematics

./: .gitignore  AXIS_CONFIGURATION.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  pyproject.toml  readme.md  test_data.py  test_euler.py  test_robot.py  try.py
.claude/: settings.local.json
.github/workflows/: CI.yml  build-and-release.yml
documentation/: advanced-features.md  api.md  developer-guide.md  getting-started.md  robot-animation-guide.md  robot_animation_viewer.html
python/: test-requirements.txt
python/examples/: example_batch.py  example_comau_nj165.py  example_configuration.py  example_find_signs.py  example_nj165.py  example_nj290.py  example_slerp_trajectory.py  play.py  robot_animation.py
python/py_opw_kinematics/: __init__.py  _internal.pyi
python/tests/: test-requirements.txt  test_collision.py  test_euler.py  test_euler_quaternion_reference.py  test_integration.py  test_joint_limits.py  test_kinematic_model.py  test_performance.py  test_robot.py
src/: axis_configuration.rs  configuration.rs  euler.rs  kinematic_model.rs  lib copy.rs  lib.rs
