[package]
name = "py-opw-kinematics"
version = "0.0.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_opw_kinematics"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.34"
polars = "0.52"
pyo3 = "0.26"
pyo3-polars = "0.25"
rs-opw-kinematics = { version = ">=1.5.0, <2.0.0", default-features = false }
