[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py-opw-kinematics"
dynamic = ["version"]
requires-python = ">=3.13"
description = "A Python wrapper for the rs-opw-kinematics library"
authors = [{ name = "CEAD Group", email = "software@ceadgroup.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "maturin>=1.7.4",
    "numpy>=1.26.4",
    "polars[numpy,pyarrow]>=1.31.0",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "scipy",
    "mypy",
    "scipy-stubs",
    "pip>=25.1.1",
    "ruff>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "jupyter",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "py_opw_kinematics._internal"
include = ["python/py_opw_kinematics/py.typed"]

[project.urls]
Homepage = "https://github.com/CEAD-group/py-opw-kinematics"
Repository = "https://github.com/CEAD-group/py-opw-kinematics.git"
Documentation = "https://github.com/CEAD-group/py-opw-kinematics/blob/main/README.md"
