[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "py-opw-kinematics"
dynamic = ["version"]
requires-python = ">=3.11"
description = "A Python wrapper for the rs-opw-kinematics library"
authors = [{ name = "CEAD Group", email = "software@ceadgroup.com" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy>=1.26.4",
    "scipy>=1.16.0",
]

[project.optional-dependencies]
polars = [
    "polars>=1.22.0",
]
pandas = [
    "pandas>=2.0.0",
]
dev = [
    "maturin>=1.7.4",
    "jupyter>=1.1.1",
    "scipy-stubs",
]
test = [
    "pytest",
    "mypy",
    "polars>=1.22.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "py_opw_kinematics._internal"
include = ["python/py_opw_kinematics/py.typed"]

[project.urls]
Homepage = "https://github.com/CEAD-group/py-opw-kinematics"
Repository = "https://github.com/CEAD-group/py-opw-kinematics.git"
Documentation = "https://github.com/CEAD-group/py-opw-kinematics/blob/main/README.md"
